<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/idTitle2"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/txtTitle2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BtnAnime"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/Btn2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTitle2" />

    <Button
        android:id="@+id/BtnMovie"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/Btn3"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnAnime" />

    <Button
        android:id="@+id/BtnVG"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/Btn4"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnMovie" />
</androidx.constraintlayout.widget.ConstraintLayout>